[tool.poetry]
name = "create-and-publish-web-apps-and-data-dashboards-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
poetry-lock-package = "^0.4.4"
pandas = "^1.3.5"
streamlit = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
